K8S/activities-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activities-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activities-postgres
  template:
    metadata:
      labels:
        app: activities-postgres
    spec:
      containers:
      - name: activities-postgres
        image: arm64v8/postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/opt/postgresql/data
            name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: activities-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: activities-postgres-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: activities-postgres
  ports:
    - name: activities-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: activities-postgres-nodeport-service
spec:
  type: NodePort
  selector:
    app: activities-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
