K8S/activities-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naabi-activities-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naabi-activities-service
  template:
    metadata:
      labels:
        app: naabi-activities-service
    spec:
      containers:
        - name: naabi-activities-service
          image: cnazk/naabi-activities-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: activities-service-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: naabi-activities-service
  ports:
    - name: naabi-activities-service
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: naabi-activities-service-np-service
spec:
  type: NodePort
  selector:
    app: naabi-activities-service
  ports:
    - name: naabi-activities-service
      protocol: TCP
      port: 80
      targetPort: 80
