K8S/friends-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naabi-friends-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naabi-friends-service
  template:
    metadata:
      labels:
        app: naabi-friends-service
    spec:
      containers:
        - name: naabi-friends-service
          image: cnazk/naabi-friends-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: friends-service-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: naabi-friends-service
  ports:
    - name: naabi-friends-service
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: naabi-friends-service-np-service
spec:
  type: NodePort
  selector:
    app: naabi-friends-service
  ports:
    - name: naabi-friends-service
      protocol: TCP
      port: 80
      targetPort: 80
