K8S/identity-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-postgres
  template:
    metadata:
      labels:
        app: identity-postgres
    spec:
      containers:
      - name: identity-postgres
        image: arm64v8/postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/opt/postgresql/data
            name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: identity-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: identity-postgres-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: identity-postgres
  ports:
    - name: identity-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: identity-postgres-nodeport-service
spec:
  type: NodePort
  selector:
    app: identity-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
