K8S/identity-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naabi-identity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naabi-identity-service
  template:
    metadata:
      labels:
        app: naabi-identity-service
    spec:
      containers:
        - name: naabi-identity-service
          image: cnazk/naabi-identity-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: naabi-identity-service
  ports:
    - name: naabi-identity-service
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: naabi-identity-service-np-service
spec:
  type: NodePort
  selector:
    app: naabi-identity-service
  ports:
    - name: naabi-identity-service
      protocol: TCP
      port: 80
      targetPort: 80
