K8S/react-web-serice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naabi-web-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naabi-web-service
  template:
    metadata:
      labels:
        app: naabi-web-service
    spec:
      containers:
        - name: naabi-web-service
          image: cnazk/naabi-web-front:latest
---
apiVersion: v1
kind: Service
metadata:
  name: web-service-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: naabi-web-service
  ports:
    - name: naabi-web-service
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: naabi-web-service-np-service
spec:
  type: NodePort
  selector:
    app: naabi-web-service
  ports:
    - name: naabi-web-service
      protocol: TCP
      port: 80
      targetPort: 80
